Fix MailHealthIndicator and enhance AuthZen RBAC model
- Fix MailHealthIndicator by replacing invalid testConnection() with Transport.connect() for SMTP health checks
- Resolve duplicate constructor error in ErrorResponse by removing @AllArgsConstructor and consolidating constructors
- Enhance Permission and Role entities with lazy fetching, orphan removal, and validation annotations
- Add RolePermission and UserRole entities to support RBAC
- Update GlobalExceptionHandler to use corrected ErrorResponse constructors
- Update pom.xml with mail and actuator dependencies
- Configure mail settings in application.yml
- Document health checks and RBAC in README.md